--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="Augustyn Głowacki - React Junior Developer Portfolio" />
+  <title>AG Frontend</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest">
+  <link rel="mask-icon" href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg" color="#175daf">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#175daf">
+  <meta name="msapplication-config" content="%PUBLIC_URL%/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#175daf">
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,20 +30,108 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <script type="text/javascript">
+    // Single Page Apps for GitHub Pages
+    // https://github.com/rafrex/spa-github-pages
+    // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
+    // ----------------------------------------------------------------------
+    // This script checks to see if a redirect is present in the query string
+    // and converts it back into the correct url and adds it to the
+    // browser's history using window.history.replaceState(...),
+    // which won't cause the browser to attempt to load the new url.
+    // When the single page app is loaded further down in this file,
+    // the correct url will be waiting in the browser's history for
+    // the single page app to route accordingly.
+    (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <style>
+    body {
+      background: #175daf;
+    }
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    .svg1 {
+      animation: rotate 1.5s linear infinite;
+      -webkit-animation: rotate 1.5s linear infinite;
+      -moz-animation: rotate 1.5s linear infinite;
+      height: 100px;
+      margin-top: 5rem;
+    }
+
+    .div1 {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: column;
+    }
+
+    .sdot {
+      width: 274px;
+      height: 274px;
+      position: relative;
+      top: 0;
+    }
+
+    @keyframes rotate {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    @-webkit-keyframes rotate {
+      to {
+        -webkit-transform: rotate(360deg);
+      }
+    }
+
+    @-moz-keyframes rotate {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    .path {
+      stroke-dashoffset: 20;
+      stroke-dasharray: 170;
+    }
+
+    .ico {
+      margin-top: 8rem;
+      width: 200px;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root">
+    <div class="div1">
+      <img class="ico" src="assets/logo.png" alt="">
+      <svg class="svg1" width="174px" height="174px" viewBox="0 0 66 66">
+        <circle class="path" fill="transparent" stroke-width="2" cx="33" cy="33" r="30" stroke="url(#grd)" />
+        <linearGradient id="grd">
+          <stop offset="0%" stop-color="#fff" stop-opacity="0.5" />
+          <stop offset="100%" stop-color="silver" stop-opacity="1" />
+        </linearGradient>
+        <svg class="sdot" width="5px" height="5px" viewBox="0 0 66 66" x="37" y="1.5">
+          <circle class="path" fill="#FFF" cx="33" cy="33" r="30" opacity="1" />
+        </svg>
+      </svg>
+    </div>
+  </div>
+   <!-- single page app in bundle.js -->
+   <script src="/Portfolio/build/bundle.js"></script>
+</body>
+
 </html>
