Animate on Scroll added

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
-    <div class="div1">
+    <!-- <div class="div1">
       <img class="ico" src="assets/logo.png" alt="">
       <svg class="svg1" width="174px" height="174px" viewBox="0 0 66 66">
         <circle class="path" fill="transparent" stroke-width="2" cx="33" cy="33" r="30" stroke="url(#grd)" />
@@ -128,7 +128,7 @@
           <circle class="path" fill="#FFF" cx="33" cy="33" r="30" opacity="1" />
         </svg>
       </svg>
-    </div>
+    </div> -->
   </div>
    <!-- single page app in bundle.js -->
    <script src="/Portfolio/build/bundle.js"></script>
