--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <meta name="description" content="Augustyn Głowacki - React Junior Developer Portfolio" />
-  <title>AG</title>
+  <meta name="description" content="Augustyn Głowacki - Junior Frontend Developer Portfolio" />
+  <title>Portfolio</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"> 
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
-  <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest">
-  <link rel="mask-icon" href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg" color="#175daf">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
-  <meta name="msapplication-TileColor" content="#175daf">
-  <meta name="msapplication-config" content="%PUBLIC_URL%/favicon/browserconfig.xml">
-  <meta name="theme-color" content="#175daf">
+<link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+<link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest">
+<link rel="mask-icon" href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg" color="#175daf">
+<link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#f4f7fa">
+<meta name="msapplication-config" content="%PUBLIC_URL%/favicon/browserconfig.xml">
+<meta name="theme-color" content="#f4f7fa">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
