--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
 <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest">
 <link rel="mask-icon" href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg" color="#175daf">
 <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
-<meta name="msapplication-TileColor" content="#f4f7fa">
+<meta name="msapplication-TileColor" content="#fafbfd">
 <meta name="msapplication-config" content="%PUBLIC_URL%/favicon/browserconfig.xml">
-<meta name="theme-color" content="#f4f7fa">
+<meta name="theme-color" content="#fafbfd">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -57,7 +57,7 @@
 
   <style>
     body {
-      background: #f4f7fa,
+      background: #fafbfd,
     }
 
     .svg1 {
